# Vox-Studio

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPMENT_PLAN.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci-windows.yml
cmake/: Packaging.cmake  QtSetup.cmake  Warnings.cmake
docs/: CODING_STANDARDS.md  RVC_NATIVE.md
docs/adr/: 0001-record-architecture-decisions.md
installer/: rvc_sidecar.iss
src/app/: Logging.cpp  Logging.h  main.cpp
src/audio/: AudioEngine.cpp  AudioEngine.h  AudioFile.cpp  AudioFile.h  AudioPreview.cpp  AudioPreview.h  AudioTypes.h  Capture.cpp  Capture.h  LatencyProbe.cpp  LatencyProbe.h  Resampler.cpp  Resampler.h  RingBuffer.cpp  RingBuffer.h
src/core/: Error.h  Expected.h  Project.cpp  Project.h  Sequence.cpp  Sequence.h  SequenceRenderer.cpp  SequenceRenderer.h  TakeManager.cpp  TakeManager.h
src/db/: Database.cpp  Database.h  Migrations.cpp  Migrations.h  ProjectRepository.cpp  ProjectRepository.h  ScriptRepository.cpp  ScriptRepository.h  SequenceRepository.cpp  SequenceRepository.h  TakeRepository.cpp  TakeRepository.h  VoiceRepository.cpp  VoiceRepository.h
src/dsp/: NoiseSuppressor.cpp  NoiseSuppressor.h  Vad.cpp  Vad.h
src/io/scripts/: CsvImporter.cpp  CsvImporter.h  FountainImporter.cpp  FountainImporter.h  PlainTextImporter.cpp  PlainTextImporter.h  RenpyImporter.cpp  RenpyImporter.h  ScriptImporter.cpp  ScriptImporter.h  ScriptTypes.cpp  ScriptTypes.h  YarnImporter.cpp  YarnImporter.h
src/net/elevenlabs/: Client.cpp  Client.h  Models.cpp  Models.h  StsApi.cpp  StsApi.h  TtsApi.cpp  TtsApi.h  VoicesApi.cpp  VoicesApi.h
src/platform/win/: AppPaths.cpp  AppPaths.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h
src/rvc/: F0Extractor.cpp  F0Extractor.h  HubertEncoder.cpp  HubertEncoder.h  NativeRvcAudio.cpp  NativeRvcAudio.h  OnnxRvcEngine.cpp  OnnxRvcEngine.h  RvcClient.cpp  RvcClient.h  RvcModelRegistry.cpp  RvcModelRegistry.h  RvcSidecar.cpp  RvcSidecar.h
src/secrets/: DpapiVault.cpp  DpapiVault.h
src/ui/: CharacterAssignmentDialog.cpp  CharacterAssignmentDialog.h  CloneVoiceDialog.cpp  CloneVoiceDialog.h  HotkeyManager.cpp  HotkeyManager.h  LiveAudioProcessor.cpp  LiveAudioProcessor.h  LiveMicPanel.cpp  LiveMicPanel.h  MainWindow.cpp  MainWindow.h  NewProjectWizard.cpp  NewProjectWizard.h  ProjectHud.cpp  ProjectHud.h  RecentProjectsModel.cpp  RecentProjectsModel.h  RvcModelManagerDialog.cpp  RvcModelManagerDialog.h  ScriptViewerPanel.cpp  ScriptViewerPanel.h  SettingsDialog.cpp  SettingsDialog.h  TakeListWidget.cpp  TakeListWidget.h  TimelinePanel.cpp  TimelinePanel.h  VoiceLibraryPanel.cpp  VoiceLibraryPanel.h
tests/fixtures/elevenlabs/: models.json  subscription.json  user.json  voice_created.json  voice_detail.json  voices.json  voices_search_page_1.json  voices_search_page_2.json
tests/fixtures/scripts/: sample.csv  sample.fountain  sample.rpy  sample.txt  sample.yarn.json
tests/tools/: test_rvc_onnx_tools.py
tests/unit/: test_dpapi_vault.cpp  test_elevenlabs_client.cpp  test_elevenlabs_models.cpp  test_live_audio.cpp  test_live_mic_panel.cpp  test_onnx_rvc_engine.cpp  test_project_repository.cpp  test_rvc_client.cpp  test_rvc_model_registry.cpp  test_rvc_sidecar.cpp  test_script_importers.cpp  test_script_repository.cpp  test_script_viewer_panel.cpp  test_sequence_renderer.cpp  test_sequence_repository.cpp  test_smoke.cpp  test_sts_api.cpp  test_take_manager.cpp  test_timeline_panel.cpp  test_tts_api.cpp  test_voice_repository.cpp  test_voices_api.cpp
tools/: rvc_native_smoke.cpp
tools/rvc_compat_sidecar/: VoxStudioRvcCompatSidecar.cs
tools/scripts/: compare_rvc_outputs.py  export_rvc_to_onnx.py  inspect_onnx_contract.py  validate_rvc_pass9b_gate.py
